<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddCardFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#EFEEF1">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_back" />
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_marginHorizontal="5dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_add_blue" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="Rf Kartalari"
                    android:textColor="@color/purple_500" />
            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!--Body-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEEF1"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_card"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:text="@string/add_info_card"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/cardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/etCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:background="@drawable/border_edittext"
                    android:hint="0000 0000 0000 0000"
                    android:inputType="phone"
                    android:maxLines="19"
                    android:padding="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardNumber"
                    app:mask="#### #### #### ####" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cards"
                    android:padding="10dp"
                    android:src="@drawable/ic_scan"
                    app:layout_constraintBottom_toBottomOf="@id/etCardNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/etCardNumber" />

                <TextView
                    android:id="@+id/validity_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/expire_date"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCardNumber" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/validity_period">

                    <com.vicmikhailau.maskededittext.MaskedEditText
                        android:id="@+id/etValidityPeriodOfTheCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border_edittext"
                        android:hint="OO/YY"
                        android:inputType="phone"
                        android:maxLines="5"
                        android:padding="15dp"
                        app:mask="##/##" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/continued"
            android:textColor="@color/purple_200"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


</LinearLayout>